--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                         <button class="button">Contact Me</button>
                     </div>
                 </div>
-                <div class="tag"><p>Techinal Head</p></div>
+                <div class="tag"><p>Technical Head</p></div>
                 </div>
                 <div class="card">
                     <button class="mail">
